2006-08-21  Aaron Bockover  <abockover@novell.com>

	* src/gstr.c: fixed bug/invalid read/write on malloc-only case (no
	realloc/delimiter token not found); use memcpy instead of strncpy for
	better performance

	* test/test.c (run_group): allow running specific tests under a group;
	added copied g_strsplit/g_strfreev from EGlib source as eg_strsplit
	and eg_strfreev to avoid performance skews in the driver
	
	* test/driver.c: allow user-specified group name to contain specific
	test to run under the group as 'group_name:test1,test2,...testN'

	* test/string-util.c: Added more g_strsplit tests

	* test/slist.c:
	* test/ptrarray.c:
	* test/fake.c:
	* test/string.c:
	* test/list.c:
	* test/array.c:
	* test/hashtable.c: make test names shorter (no need to prefix with
	the group since it runs under the group)

2006-08-21  Miguel de Icaza  <miguel@novell.com>

	* src/glib.h (g_hash_table_new_full): Add missing prototype.
	Replace g_free(x) with plain free, so it can be used as a function
	argument. 
	Add ABS

	* src/ghashtable.c: Add rehashing. 

	* test/hashtable.c: Add a bunch of extra tests.

	* src/goutput.c: Fix g_log so it actually formats the data. 

	* src/ghashtable.c (g_hash_table_new): The glib test suite
	uncovered a bunch of bugs, the g_hash_table_new should actually
	have parameters.

	(g_hash_table_remove, g_hash_table_foreach_remove): Fixed bugs
	uncovered. 

2006-08-20  Aaron Bockover  <abockover@novell.com>

	* src/gmisc.c: added g_setenv, g_getenv, g_unsetenv

	* src/gstr.c: added g_snprintf, g_sprintf, g_fprintf, g_printf

	* src/glib.h: added macros for above va_args printf functions

	* src/Makefile.am: added gmisc.c

	* test/whats-implemented: script to see what needs to be implemented

2006-08-20  Chris Toshok  <toshok@ximian.com>

	* test/array.c (test_array_big): add a test from the glib
	documentation.

2006-08-20  Chris Toshok  <toshok@ximian.com>

	* test/tests.h: add array tests to the mix.

	* test/array.c: a few array tests.
